# GraphicsCpp

./: .gitignore  CMakeLists.txt  cleanBuild.sh  conanfile.txt
Shaders/: FragShader.glsl  LightSourceVertexShader.glsl  VertexShader.glsl
Src/: Camera.cpp  Camera.h  FileSystem.cpp  FileSystem.h  Main.cpp  MathUtils.h  Mutex.cpp  Mutex.h  MutexHandle.cpp  MutexHandle.h  Render.h  Rotator.cpp  Rotator.h  Shader.cpp  Shader.h  Shaders.h  TraingleRender.h
libs/ALib/shitty/: MyClass.h
libs/Engine/eg/: Engine.h
